--- a/MedicalLink/ChucNang/GopBenhAn/ucGopBenhAn.resx
+++ b/MedicalLink/ChucNang/GopBenhAn/ucGopBenhAn.resx
@@ -146,4 +146,24 @@
         tWvj31ZJAgQSCGgnZXa9tURARboRuSy3y863TKDUibOrI4Wb7iT/AGcZ7VCFlQM4AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="imageCollectionMBA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="DevExpress.Utils.v15.2" name="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+  <data name="imageCollectionMBA.ImageStream" type="DevExpress.Utils.ImageCollectionStreamer, DevExpress.Utils.v15.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFpEZXZFeHByZXNzLlV0aWxzLnYxNS4yLCBWZXJzaW9uPTE1LjIu
+        OS4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI4OGQxNzU0ZDcwMGU0OWEMAwAAAFFT
+        eXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRv
+        a2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAAChEZXZFeHByZXNzLlV0aWxzLkltYWdlQ29sbGVjdGlvblN0
+        cmVhbWVyAgAAAAlJbWFnZVNpemUERGF0YQQHE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAAgIAAAAF/P//
+        /xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAABAAAAAQAAAACQUAAAAP
+        BQAAAEgBAAACRAEAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAAAFzUkdCAK7OHOkA
+        AAAEZ0FNQQAAsY8L/GEFAAAA7klEQVQ4T2NgIAE0MPzXAOLVQGxGgjaIUqAmEN4PxP+B+C8QzwdiMaIN
+        AioOg2oGGQDDD4kyAKiBC4gfYzFgJrEGtGLR/B4oJkLQAKAiJSD+jsWAPIKaoYG3EYvmy0AxFhQDgAJC
+        6CYCxdywaAYFoBO65hCoM3thBgFpNiC+jsWA1eiaBYCKniMpfAtkFwFxHRbNX4FicugGzMThTOT4hrHr
+        MAIOqHk2EINSFjYNyGL3gWo4sIY8UMIEiA8TMCQIb7QBNYPSOigwQTahu2Y3SJ4oAHImEJcB8UeoQT+B
+        tAZRmpEVATWJAfFkIMab4gCfEx0ENfYb+gAAAABJRU5ErkJgggs=
+</value>
+  </data>
 </root>
