--- a/MedicalLink/BCQLTaiChinh/ucBC102_TrichThuongChuyenGiaYC.resx
+++ b/MedicalLink/BCQLTaiChinh/ucBC102_TrichThuongChuyenGiaYC.resx
@@ -118,46 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnExport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADaSURBVDhPpZIxCsJAEEW3ShFCEA+QI1iKWARLj5Aqp7CwCgGxEBELT2iVwiJVSBn/h1kI62R3
-        wcBjw+78x0yyxihPa6YavEEv8L3Wan/2UJiAEUwO3EuCEhSlStjK0hhB5hFk/wryGEHu6WC1KECoABtQ
-        egQ8Y02hff3GE3T/yEUTGAgeEZIXavRJeBCQLIetUiR3pRM9jMIjWM97EsltJnm6bTPDLFvmFS3doURy
-        wnrWZpa/NVIwgEPwgjgFIhgo6MAV7MFO2GLVsOesZaajoAIfGYXjxMJM9QXvD0136zKdywAAAABJRU5E
-        rkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAg9JREFUSEut
+        lbFLQlEUxh8hEdEgIg7iEBEN/QENDRER0tQQ0RDSLA4NEdEUSjRHNEdDREM0NTRFRERERERESDRFRERE
+        Q0RE7/U7z/P0Kep9msLHvU+/c75zvnfv0bJ8n6zltIFBsA6uspb9CB7AAc+zIObnN7QnOAw2wRdwakAE
+        J6SQZpIfEewlviNJjucZ1gzrNutnQdSWAtKBBdQWEkhyN3gBtFcm4LtecKo8ERsKJAJx2GfLfL32+S0K
+        pDvp9CSQVeq7VH/NPmSqCs44+FE7+018C+K9ertoJEOA2wHkZEkXGWMMpHdtedJIVgL8My1q2RgD8VUF
+        po3kooB9rjE5YwyteuQ1I7lgUQy8qEUpYwzkFa1GgqKmALhz4Bd8w4+b+FKRnG/vPeyx76wVxG8DJP1Q
+        /7eMyT2CnAYCqcq9bMeFRKVxwD4CmEWS3D09VO+MNCIQIlBGA+fbvURyU2/APjgEz2qLl1xWOaop1lHW
+        ml0Xi4Aod2KKNa8ilQNPxHfAGHhSm4QjnUsR4UAdQaQbGR/2EquM7VX2WOj0+CxNq51ahGvtBRzzSw9S
+        BYmS1bu0uYB2IkiOuhySdCHA/SmOd+nAs1Q6ibRAxImTSCera1Hr7SJpHyK3NQ6FjPPm/2J9L1wuKp1U
+        tWvj31ZJAgQSCGgnZXa9tURARboRuSy3y863TKDUibOrI4Wb7iT/AGcZ7VCFlQM4AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnNVThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAEeSURBVDhPY2BAAw0M//2A+DgQvwbio0Dsga4GJx+o2AWI/wLxfyT8G8i2IcoQoMKtaJphBq0n
-        1oD7OAy4SqwB13EYcJ5YA5bjMGA+sQb44DDAiVgDGIAG7EQzZCOQT5R+sCKgYis0A4yAfC4groGmj5NA
-        uheIRTBMBQoaoEXlSyBfCojPQg39CqQ/QtkPQXIwW9VwpIFGoHgdkos6gewUJP5ikJM9gPgzjsADpUxQ
-        sgbJtwKxGxCbAHE7ED8G4rcgA57j0AxKhQ5Q578F0hFQLyoB6SggvgnyDsiA93gMKALKTcTjhe0gA0Bx
-        fxuHISBxOahzQS4CBRwstYK8pQcLRJBBKkAcAMQZQFwCxGVQWgNqyEqQk4EYpBGUVsCaAVtOfuOcUaBy
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="openFileDialogSelect.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>187, 25</value>
-  </metadata>
-  <assembly alias="DevExpress.Utils.v15.2" name="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-  <data name="imMenu.ImageStream" type="DevExpress.Utils.ImageCollectionStreamer, DevExpress.Utils.v15.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFpEZXZFeHByZXNzLlV0aWxzLnYxNS4yLCBWZXJzaW9uPTE1LjIu
-        OS4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI4OGQxNzU0ZDcwMGU0OWEMAwAAAFFT
-        eXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRv
-        a2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAAChEZXZFeHByZXNzLlV0aWxzLkltYWdlQ29sbGVjdGlvblN0
-        cmVhbWVyAgAAAAlJbWFnZVNpemUERGF0YQQHE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAAgIAAAAF/P//
-        /xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAABAAAAAQAAAACQUAAAAP
-        BQAAAAAAAAACCw==
-</value>
-  </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>59</value>
-  </metadata>
 </root>
