--- a/MedicalLink/BCQLTaiChinh/NhapThongTinPTTT/ucNhapThucHienPTTT.resx
+++ b/MedicalLink/BCQLTaiChinh/NhapThongTinPTTT/ucNhapThucHienPTTT.resx
@@ -117,4 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="DevExpress.Utils.v15.2" name="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+  <data name="imMenu.ImageStream" type="DevExpress.Utils.ImageCollectionStreamer, DevExpress.Utils.v15.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFpEZXZFeHByZXNzLlV0aWxzLnYxNS4yLCBWZXJzaW9uPTE1LjIu
+        OS4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI4OGQxNzU0ZDcwMGU0OWEMAwAAAFFT
+        eXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRv
+        a2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAAChEZXZFeHByZXNzLlV0aWxzLkltYWdlQ29sbGVjdGlvblN0
+        cmVhbWVyAgAAAAlJbWFnZVNpemUERGF0YQQHE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAAgIAAAAF/P//
+        /xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAABAAAAAQAAAACQUAAAAP
+        BQAAABQHAAACUQEAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAAAFzUkdCAK7OHOkA
+        AAAEZ0FNQQAAsY8L/GEFAAAA+0lEQVQ4T5XSv2rCUBzF8QxSxElEMnZwygOID+DQBxDpY3To4BhcHDt1
+        Cg4+gFPnDh18BAfHUjp0KqVDEQeJ319y0l4v+WMPfFDuPUdFEvwn8yCNsMZIR5eHkXlBiiNWCHXdHMq3
+        GrvedF0fih28O8NCokp9KC68oflCX5XqUBpgr5HrTpX6UHzyhmaLlip5OOjp7W84u9HAN1YlDwdT2M98
+        QPZBvF5hB3+8zkZFOOjiwyl84h6xc1b4wbWmeThInEKTWLO/cLiEPVllA9cr2pqdh4shNipWmaheHgrG
+        /kz7Jn/8DDUbQrGNGb5h4wMiXV8eRiEeUfPEBcEJnxMdBENRMHoAAAAASUVORK5CYIInAQAAiVBORw0K
+        GgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAADR
+        SURBVDhPlZNRCsJADET3o8crRaQH8iZS/PCM4kebt53QdMlaDIwsM2+iXWlhHmUdTE/TvRo/xpjZtNBx
+        g/LbtJq+prkGyZCJgaUzYPLNGK50CZ6yyC4Eo+kTTHRawlleZOiMDnSXSP2yD4aCCFK8LvsQCIiFqH7Z
+        B0Dg/2XGoOyZUb0TYfkACGzLrv4SAgFtIfPOSzAURJBnvkntnRxLOMiIAIWpAjac5UVmX2IfvBgxSG8b
+        T1lkXwTxZUrLPmRiYPeXSQFL+CWX/zOMWCuXsgG/MoR8kExNbQAAAABJRU5ErkJggkIBAACJUE5HDQoa
+        CgAAAA1JSERSAAAAEAAAABAIBgAAAB/z/2EAAAAgY0hSTQAAeiUAAICDAAD5/wAAgOkAAHUwAADqYAAA
+        OpgAABdvkl/FRgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAMhJREFUOE+tk8sNwjAQRF0F1ACcaS/QBkiA
+        yBEufI4gqAYoAO4wz/LysSyTEEZ60u5k1koc2yXUF6W4iXuAGo9nWY2FDZ3EKkBtPpmkjoLAWnQxIuFt
+        BBmyH5oJHhS+y2sgyE59J3UExs531bQXzDDrlqFp0VQUWWYWNBRsUl2dBbOvlWqKmf8t0OgTftnEtni+
+        eePfiDgUGBySbxoKshPfvcmOMse1hxEJbyvIHDBSGgkCwCZxL+ASPCCTlV3nq7Ah6rmIrrNzD+NIS3lA
+        5S+zAAAAAElFTkSuQmCCFwEAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAACBjSFJN
+        AAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAAF2+SX8VGAAAACXBIWXMAAAsMAAALDAE/QCLIAAAA
+        nUlEQVQ4T6XTyw3CMBCE4RQBaQwqAimd0A6C0AivA3Bg+UfByh7WPmQPnxLJ45H86swsZfo58J2tMGDE
+        6++EHTQ2Z4OCDa6wihuUCQs08EU00VNmKnEFa6g9mhBRtvcFWl8UbBl8gTYpCrWMvkA7HYVa3tmChy9Y
+        soSzL0hvYo/UMUrqIhVb3BFNFI1Vr3JRHtMFHzxxxB6Vx7SYdT+gY42lZDl7IAAAAABJRU5ErkJgghUB
+        AACJUE5HDQoaCgAAAA1JSERSAAAAEAAAABAIBgAAAB/z/2EAAAAgY0hSTQAAeiUAAICDAAD5/wAAgOkA
+        AHUwAADqYAAAOpgAABdvkl/FRgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAJtJREFUOE+l08sNwjAQhOEU
+        ASmFRqAikFIegtAIrwNwwPyDYrSHwYfs4cvF45G8sbtSSsr0WUULDBjxmBywhdZ+WVewxhnUWxcoYwu0
+        8IbbGCnzLYkFS6jdbXCU7WOBzueCLUMs0JBcqGWMBZq0C7U8swW3WDDnCMdYkB5ij9RvlNRFqja4wm0U
+        rf29ylV9TCe8cMceO/jHNF/pPt8/OKnbxQ+IAAAAAElFTkSuQmCCFgEAAIlQTkcNChoKAAAADUlIRFIA
+        AAAQAAAAEAgGAAAAH/P/YQAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAAF2+SX8VG
+        AAAACXBIWXMAAAsMAAALDAE/QCLIAAAAnElEQVQ4T6XTQQ6CMBQE0K48gXIxPBEmHI8IXETRhbrwO0Oo
+        +SRDF/zFY9PpJP20ycxC5s8hrRyhhQFeiys0wLV/VhXUcAPbcAdmZAEXvqA2eszMJb7gBGxXGxRmK1/A
+        86lgSesLOCQVKhl8ASetQiXvaMHDF+w5Qu8LwkOsIPQbKXSRsjNMoDYS1zavcpYf0wgfeEIHF9CPaT9L
+        P40uE+m1qFUYAAAAAElFTkSuQmCCCw==
+</value>
+  </data>
 </root>
