--- a/MedicalLink/BaoCao/BC45_TinhHinhThanhToan/ucBC46_TinhHinhThanhToan.resx
+++ b/MedicalLink/BaoCao/BC45_TinhHinhThanhToan/ucBC46_TinhHinhThanhToan.resx
@@ -118,46 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnExport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADfSURBVDhPlZIxCsJQEERTpQhBJAfIESxFLIJljpAqp7CwEkEsRMTCE1qlsLAKKeOMTMzn68Y4
-        8GCz++aDYPAtu6AtwQ08BOdS5+FADEEDWg/uQml2IEVOySeSZgdS7JVcYml2KHkll4k0O5S8kstU2mdw
-        TMEMZJK/wRudVLU+WG4ljWGvWh8sydmRLK5ALS88gKFH7HIXCuCkwu8yljlI9PkKRXAEXfnCnRt8JyDn
-        wL9opv07LIA12HD2ww5oONRgpf3o6IGaQwUOYAkWYm7Q3emyU/GBAtwBf8o/oNMWT+8PTXdnpThIAAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAiNJREFUSEu1
+        lbFrU1EUxkMIpYhDCaFDyCBSHPwDHDpIEQmdOog4SOgcOjhIEaeSIM5FOouDSAfp5OAkIiIiUoqISBAn
+        kVJKEQcRKb3X33n3u7Em3vdioh98nPfO/c5337m596Z0HJ2SL8N5uAF3OiX3CX6Ej3m/Bmcl/XtQPAPv
+        we/QJ2gTXiKWVTYaKDDzpxRHo/ewy/sycYX4gPgtjDn7gLZKi4HYlgUDM8+Kb8ApDfdBbg6+kM4mO6+h
+        fCBcgHFZVmGyfcZq0Loz7fM8bR+IbN3tq94QK0ongWYJHoZO/Fml00D4QRPcVCoXaKeh7SybYEXpNBB9
+        CRP4y0oVAu3LUONuKZUGwn1NcFWpQmD8SjVdpdI4Jr6jVC7QzcI9LVFL6TQQ3YYmtqKa0kmguw6P4A/0
+        daXTQGj7O/4OW/CEhobA2DlMvwatu690MSiw08pXZYfoWTD6tcd5rkLuIjPPloav9xc0XAzEFQrtamB/
+        Z53YSX0LH8EncBfaskRzi7ZVW8SLxGTXfSCE7gqxJ4NB2uSbcBF+DrmsG+vcPmJGVvlASDd2fbg1ol3b
+        6zyzhP60JKZpB/NsAkX3mufiH30UYNQMxoN0HEDXkGx8YHISQ85P7CAzj8/WSVXS8YFJHepm/U/LhdEZ
+        jN4F4yHadT7+X2wEJnZQ6eSPy3VXssmAUQNTdfLbch1IMjkwPIXhdjCOdD0N/xtgSif+IcZ2pXDSffMn
+        ZxntUHku7ZkAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnNVThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAEsSURBVDhPjdKxSgNBFIXhra1TpUghQawkiJVYiIikELEUawvrIKlC0ELEwsInsLAQK7EQ8QFE
-        LMRKRCxCsJAQgixiJbL+B+6Qy7CMXvhIZvbcYWZ3srh2s2INdxjiFk179HcRXsYPCucbCxZJF8Er1+hd
-        WCRdBHtRY/BkkXQRfI4ag0eLpIvgWdQYnFgkXQRXo8ZgySLpIig3rlEuYYl/FOF51yyzmEAHuh/3OELF
-        WsbFZAP+Uw5QxYONv5Db/z6qoXEKZXdgD103PsSWG5+quYlPN+npZmrber6PFczhAG8YaYF3lDXLIrT9
-        ETagI05iEy/ItcAHypqlhWM3jo9wrQX07V/dpKf5GrRdjfXiwm3VsWbCS5Q61rGNHbTtdxpa5Bz6AmrU
-        XaE5y34BW05+4xLLlDgAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="openFileDialogSelect.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>187, 25</value>
-  </metadata>
-  <assembly alias="DevExpress.Utils.v15.2" name="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-  <data name="imMenu.ImageStream" type="DevExpress.Utils.ImageCollectionStreamer, DevExpress.Utils.v15.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFpEZXZFeHByZXNzLlV0aWxzLnYxNS4yLCBWZXJzaW9uPTE1LjIu
-        OS4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI4OGQxNzU0ZDcwMGU0OWEMAwAAAFFT
-        eXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRv
-        a2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAAChEZXZFeHByZXNzLlV0aWxzLkltYWdlQ29sbGVjdGlvblN0
-        cmVhbWVyAgAAAAlJbWFnZVNpemUERGF0YQQHE1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAAgIAAAAF/P//
-        /xNTeXN0ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAABAAAAAQAAAACQUAAAAP
-        BQAAAAAAAAACCw==
-</value>
-  </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>59</value>
-  </metadata>
 </root>
