--- a/MedicalLink/FormCommon/TabCaiDat/ucQuanLyNguoiDung.resx
+++ b/MedicalLink/FormCommon/TabCaiDat/ucQuanLyNguoiDung.resx
@@ -122,116 +122,116 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="checker.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="repositoryItemCheckEdit3.PictureChecked" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="repositoryItemCheckEdit5.PictureChecked" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridColumn10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="repositoryItemCheckEdit7.PictureChecked" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridColumn14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="repositoryItemCheckEdit9.PictureChecked" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridColumn20.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
         dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
-        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
-        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
-        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
-        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+        UmliYm9uO2RjyGgAAACqSURBVDhPpc6xDcJADAXQRFS0SJmARSiDREV2oWEQRmATsgINUyAkqJz/pTPy
+        6ewoB8XT3Tn5X25E5C/usEYxOF0vS7R6/6Wghxts+K4tYPgNAiO0NQU2zHMP+QYYrDh0uGGy4S3cYacf
+        kzBMGl7DA/jTC7RkNkx2gwE+oCVnsGGWZWH6FqSSI2iJCsOUFTglPIu1La+AWPKEQ3qHogLqzD1UFNRy
+        h8tJMwFYUmCqbEZGpQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnUserThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAlJJREFUSEut
-        lT9IlVEYxi8hESEOIiHhICINDuIQTSEhIiLi4NTg4BSNTQ4iIjg0RTSJg0OTiIiINISIiIhTiIhDRERE
-        OIiDiIiE5/R7zj3389xzv88rBy88nD/3/X+e9/1KpYLfTMk2zpTMW9Yt8If9Ies86AJFane7x0AT2ATX
-        wEY45TxyN0s5UoqOaD+AwHC4dw7/grYkJyg+wfjJjQMZrzgI93Yi0YF5mVOWuEw6ryU6sKO3O8iy2Ul1
-        MFQuSV5ZKvdu3Up1IBrmsScu00KiAwNFzY9iFmWMGk904Gj6sQ6LjsmyNcmBlFBuB+fFj23e30c3v7t5
-        i6qm+8Z9c3L0FUWMNFCmo1pG2dFAphu5WWTWwRf2n8Ar8KBuACg0I/grp0y93D3k/6mCMl5x/7kwS/54
-        DMYxoFLE1NznHuN2khUqZ72iR/8dlXRFgWSZICzD1N0wyHIbTb3xGvSAi0hmhLtOcBbcS35MjBGktFfM
-        GpeJxvRTDIhBcWaBg6r/NmX8OVCKwXioMSCDP/V4QI+pMx8hO+DBBFZpTT8ro8Zue5lTOfC1rjt/vmNA
-        8l99MHS7bfV4xArr3Jks7ap3cCaFWxqqKhOydMya88r/WPluOAyCDiDWqZRikrLcl4OAijVfrrDWGDR9
-        3piMhxM3eoPMzpQcSAkn9UrkIqKhXCkWI/kNzsuAyLORfoBcuePZ6DMJ9+0SoNYubZXuspyuUfSKWudh
-        9i3eWcFYNxg3XbndzB8aEWLFM1bRVyx74aF9uw9KD/sG7AL4r4A0Wux0FjmC/wH+11ScCRLyGwAAAABJ
-        RU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAldJREFUSEud
+        lTFIV1EUhx8SIhENEiLRIBEODtEQTiESEhHh4NTQ4CSOTQ4hITg4STSFg4OThERENESIhEhTSIRDhIhI
+        OISDhEiE9/r97jvv+f6Xa3H/Bz7uefed87v3nnfee8V5NlP4SzOFm2Rcgz38b4wLMAAW1aYhcBlW4QR8
+        xAGMWmi+kQxuHhqiTT/wE65ZSp6R2IPgrzNRjSnfT1lKniFwxwT+x1tLyTMSxyKhiPo065aSZyQ/aC1F
+        yg+sWUqeIaQ2THVPzKKl5Bk7o0Xdj3KXlVjSH7eUPCNRizw/EwrliP196LWUfCO5D36XoincHKNFt2kI
+        PAF7FtUJgv+FsdvC2jdELiC2VYo3S+THLEQxN2GW+XfwHv8FDEOHhZxvJHQTuAMmXjMEndyfZkyV8Q8s
+        QfqU3LgI4wioFHHyJvOI+6eMlK8+mR76LjRL+ho6TTbsWMLU3fEhi8sSfCU/gltwFMWMMt6Awyj+sXYs
+        lPQZLCGJPtNXSVYHxfcaC7TMr0r8NuiITFQ7SrINHaCHqWt+Qv6ewRdYpXUjjHxq/CdQzIEWsFq3HDnh
+        u++g+A82z9vue40uoOuCzyn9G1D+oRL+8UK1wClDZ72067/AfyNwH66Duk6lVCcpZlMLNFqx2nUSBN1d
+        RolJnLn6lNEzqHWmtYCSWKQqRRWQ8j0vVCjFchTzEVaAnVfz7iv3yncBR79Jet+/Amodjq3SHYOStHvt
+        WtcP8a8wajHr+xiJu4EgHhs39IlQV/Qzqn3VZYOG/L4yLjzYCdgAlYYN6dPin4G9xUVxCv7XVJxrCM6o
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
